--- a/arch/arm64/configs/lineageos_oneplus3_defconfig
+++ b/arch/arm64/configs/lineageos_oneplus3_defconfig
@@ -39,7 +39,9 @@ CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
 CONFIG_PARTITION_ADVANCED=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_MAPLE=y
 CONFIG_CGROUP_BFQIO=y
+# CONFIG_DEFAULT_MAPLE is not set
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8996=y
 CONFIG_PCI_MSM=y
