--- a/arch/arm64/configs/lineageos_oneplus3_defconfig
+++ b/arch/arm64/configs/lineageos_oneplus3_defconfig
@@ -2934,6 +2934,7 @@ CONFIG_DTS_SRS_TM=y
 CONFIG_QTI_PP=y
 CONFIG_SND_SOC_CPE=y
 CONFIG_SND_SOC_MSM8996=y
+CONFIG_SOUND_CONTROL=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
 
 #
